samples/_failures_safe/1761218617_9d3f01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bcd08ab.c: In function ‘main’:
./samples/SAFE/__tmp_5bcd08ab.c:154:9: error: expected declaration or statement at end of input
  154 |         free_blocks(&ctx);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_5bcd08ab.c:154:9: error: expected declaration or statement at end of input
